/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package primus;

option java_package = "com.bytedance.primus.proto";
option java_generate_equals_and_hash = true;

message Time {
  message DayTime {
    int32 day = 1; // yyyymmdd, e.g. 20200520
  }

  message HourTime {
    int32 day = 1;  // yyyymmdd, e.g. 20200520
    int32 hour = 2; // Hours of day in 24 hour format, e.g. 0 ~ 23
  }

  message Now {
  }

  oneof time {
    DayTime day_time = 1;
    HourTime hour_time = 2;
    Now now = 3;
  }
}

message TimeRange {
  // TODO: Move time format to here to ensure matched formats.
  Time from = 1;
  Time to = 2;
}

message PortRange {
  int32 base = 1;
  int32 size = 2;
}

// Deprecated TODO: Clean up
enum RunningMode {
  YARN = 0;
  LOCAL = 1;
  KUBERNETES = 2;
}

enum Protocol {
  UNKNOWN = 0;
  HTTP_1 = 1;
  HTTP_2 = 2;
}
